--- a/src/components/Phonebook/ContactForm/ContactForm.module.css
+++ b/src/components/Phonebook/ContactForm/ContactForm.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin-left: 15px;
   border: 1px solid #000;
   width: 400px;
   height: 200px;
