--- a/src/components/Phonebook/Filter/Filter.module.css
+++ b/src/components/Phonebook/Filter/Filter.module.css
@@ -1,9 +1,10 @@
 .label {
-  margin: 0 auto;
+  margin-left: 15px;
   width: 500px;
 }
 
 .input {
   display: block;
   margin-top: 5px;
+  margin-left: 15px;
 }
